do som changes in Qabas branch

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: rgb(225, 35, 35);
+    color: rgb(43, 14, 147);
 }
 body{
-    background-color: aqua;
+    background-color: rgb(154, 210, 24);
 }
